--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             border-radius: 15px;
             border: 1px #fff solid;
             box-shadow: 1px 1px 1px #0f0c0c;
-            margin: 25px auto;
+            margin: 35px auto;
             background-color: #ffffff;
             text-align: center;
             width: 90%;
@@ -175,7 +175,100 @@
             background-color: #fff;
         }
         
+        @media screen and (max-width: 1600px) {
+            .box {
+                width: 95%;
+            }
+            h1 {
+                height: 20px;
+            }
+            button {
+                width: 9%;
+                height: 35px;
+                margin: 0px 10px;
+                border-radius: 15px;
+            }
+            .img_box {
+                width: 250px;
+                float: left;
+            }
+            .distribution_title {
+                margin-top: 5px;
+                width: 260px;
+                height: auto;
+                font-size: 22px;
+            }
+            .distribution {
+                float: left;
+                width: 240px;
+                height: 528px;
+                margin-top: 5px;
+                border: 3px #000 solid;
+                background-size: 100%;
+                background-repeat: no-repeat;
+            }
+            .text {
+                /* margin: 10px 50px; */
+                float: left;
+                width: 78%;
+                height: 595px;
+                background-color: #fff;
+            }
+            .player {
+                width: 38%;
+                height: 79px;
+                font-size: 13px;
+                line-height: 60px;
+                margin-left: 0px;
+                /* background-color: blueviolet; */
+            }
+            .name {
+                width: 100%;
+                float: left;
+                line-height: 100%;
+                font-size: 20px;
+                margin: 5px auto;
+            }
+            .vs {
+                width: 100%;
+                font-size: 18px;
+                float: left;
+                line-height: 100%;
+                margin: 0 auto;
+                text-align: center;
+            }
+            table {
+                /* background-color: antiquewhite; */
+                margin-left: 10px;
+                float: left;
+                width: 35%;
+                height: 480px;
+                border-right: 1px solid #000;
+                border-bottom: 1px solid #000;
+            }
+            .column {
+                margin-top: 20px;
+                float: right;
+                width: 60%;
+                height: 270px;
+                background-color: #fff;
+            }
+            .chart {
+                width: 33%;
+            }
+            .line {
+                margin-top: -60px;
+                float: right;
+                width: 60%;
+                height: 270px;
+                background-color: #fff;
+            }
+        }
+        
         @media screen and (max-width: 1024px) {
+            .box {
+                width: 95%;
+            }
             h1 {
                 height: 20px;
             }
@@ -363,18 +456,18 @@
 <body>
     <div class="box">
         <h1>训练监控(10分钟)</h1>
-        <button id="btn1" value="1">一号场地</button>
-        <button id="btn2" value="2">二号场地</button>
-        <button id="btn3" value="3">三号场地</button>
-        <button id="btn4" value="4">四号场地</button>
-        <button id="btn5" value="5">五号场地</button>
-        <button id="btn6" value="6">六号场地</button>
-        <button id="btn7" value="7">七号场地</button>
-        <button id="btn8" value="8">八号场地</button>
+        <!-- <button id="btn1" value="c001" onclick="aaa(btn1)">一号场地</button> -->
+        <!-- <button id="btn2" value="c002" onclick="aaa(btn2)">二号场地</button>
+        <button id="btn3" value="c003" onclick="aaa(btn3)">三号场地</button>
+        <button id="btn4" value="c004" onclick="aaa(btn4)">四号场地</button>
+        <button id="btn5" value="c005" onclick="aaa(btn5)">五号场地</button>
+        <button id="btn6" value="c006" onclick="aaa(btn6)">六号场地</button>
+        <button id="btn7" value="c007" onclick="aaa(btn7)">七号场地</button>
+        <button id="btn8" value="c008" onclick="aaa(btn8)">八号场地</button> -->
         <div id="box1" style="display: block;">
             <div class="img_box">
                 <div class="distribution_title">运动轨迹</div>
-                <div class="distribution" style="background-image: url(./playground_1.jpg);"></div>
+                <div class="distribution" id="bgimg" style="background-image: url(./playground_1.jpg);"></div>
             </div>
 
             <div class="text">
@@ -425,7 +518,7 @@
 
             </div>
         </div>
-        <div id="box2" style="display: none;">
+        <!-- <div id="box2" style="display: none;">
             <div class="img_box">
                 <div class="distribution_title">运动轨迹</div>
                 <div class="distribution" style="background-image: url(./playground_2.jpg);"></div>
@@ -795,99 +888,99 @@
                 </div>
 
             </div>
-        </div>
+        </div> -->
     </div>
 
 </body>
 <script>
-    var btn1 = document.getElementById("btn1");
-    var btn2 = document.getElementById("btn2");
-    var btn3 = document.getElementById("btn3");
-    var btn4 = document.getElementById("btn4");
-    var btn5 = document.getElementById("btn5");
-    var btn6 = document.getElementById("btn6");
-    var btn7 = document.getElementById("btn7");
-    var btn8 = document.getElementById("btn8");
-    btn1.onclick = function() {
-        document.getElementById('box1').style.display = "block";
-        document.getElementById('box2').style.display = "none";
-        document.getElementById('box3').style.display = "none";
-        document.getElementById('box4').style.display = "none";
-        document.getElementById('box5').style.display = "none";
-        document.getElementById('box6').style.display = "none";
-        document.getElementById('box7').style.display = "none";
-        document.getElementById('box8').style.display = "none";
-    };
-    btn2.onclick = function() {
-        document.getElementById('box1').style.display = "none";
-        document.getElementById('box2').style.display = "block";
-        document.getElementById('box3').style.display = "none";
-        document.getElementById('box4').style.display = "none";
-        document.getElementById('box5').style.display = "none";
-        document.getElementById('box6').style.display = "none";
-        document.getElementById('box7').style.display = "none";
-        document.getElementById('box8').style.display = "none";
-    };
-    btn3.onclick = function() {
-        document.getElementById('box1').style.display = "none";
-        document.getElementById('box2').style.display = "none";
-        document.getElementById('box3').style.display = "block";
-        document.getElementById('box4').style.display = "none";
-        document.getElementById('box5').style.display = "none";
-        document.getElementById('box6').style.display = "none";
-        document.getElementById('box7').style.display = "none";
-        document.getElementById('box8').style.display = "none";
-    };
-    btn4.onclick = function() {
-        document.getElementById('box1').style.display = "none";
-        document.getElementById('box2').style.display = "none";
-        document.getElementById('box3').style.display = "none";
-        document.getElementById('box4').style.display = "block";
-        document.getElementById('box5').style.display = "none";
-        document.getElementById('box6').style.display = "none";
-        document.getElementById('box7').style.display = "none";
-        document.getElementById('box8').style.display = "none";
-    };
-    btn5.onclick = function() {
-        document.getElementById('box1').style.display = "none";
-        document.getElementById('box2').style.display = "none";
-        document.getElementById('box3').style.display = "none";
-        document.getElementById('box4').style.display = "none";
-        document.getElementById('box5').style.display = "block";
-        document.getElementById('box6').style.display = "none";
-        document.getElementById('box7').style.display = "none";
-        document.getElementById('box8').style.display = "none";
-    };
-    btn6.onclick = function() {
-        document.getElementById('box1').style.display = "none";
-        document.getElementById('box2').style.display = "none";
-        document.getElementById('box3').style.display = "none";
-        document.getElementById('box4').style.display = "none";
-        document.getElementById('box5').style.display = "none";
-        document.getElementById('box6').style.display = "block";
-        document.getElementById('box7').style.display = "none";
-        document.getElementById('box8').style.display = "none";
-    };
-    btn7.onclick = function() {
-        document.getElementById('box1').style.display = "none";
-        document.getElementById('box2').style.display = "none";
-        document.getElementById('box3').style.display = "none";
-        document.getElementById('box4').style.display = "none";
-        document.getElementById('box5').style.display = "none";
-        document.getElementById('box6').style.display = "none";
-        document.getElementById('box7').style.display = "block";
-        document.getElementById('box8').style.display = "none";
-    };
-    btn8.onclick = function() {
-        document.getElementById('box1').style.display = "none";
-        document.getElementById('box2').style.display = "none";
-        document.getElementById('box3').style.display = "none";
-        document.getElementById('box4').style.display = "none";
-        document.getElementById('box5').style.display = "none";
-        document.getElementById('box6').style.display = "none";
-        document.getElementById('box7').style.display = "none";
-        document.getElementById('box8').style.display = "block";
-    };
+    // var btn1 = document.getElementById("btn1");
+    // var btn2 = document.getElementById("btn2");
+    // var btn3 = document.getElementById("btn3");
+    // var btn4 = document.getElementById("btn4");
+    // var btn5 = document.getElementById("btn5");
+    // var btn6 = document.getElementById("btn6");
+    // var btn7 = document.getElementById("btn7");
+    // var btn8 = document.getElementById("btn8");
+    // btn1.onclick = function() {
+    //     document.getElementById('box1').style.display = "block";
+    //     document.getElementById('box2').style.display = "none";
+    //     document.getElementById('box3').style.display = "none";
+    //     document.getElementById('box4').style.display = "none";
+    //     document.getElementById('box5').style.display = "none";
+    //     document.getElementById('box6').style.display = "none";
+    //     document.getElementById('box7').style.display = "none";
+    //     document.getElementById('box8').style.display = "none";
+    // };
+    // btn2.onclick = function() {
+    //     document.getElementById('box1').style.display = "none";
+    //     document.getElementById('box2').style.display = "block";
+    //     document.getElementById('box3').style.display = "none";
+    //     document.getElementById('box4').style.display = "none";
+    //     document.getElementById('box5').style.display = "none";
+    //     document.getElementById('box6').style.display = "none";
+    //     document.getElementById('box7').style.display = "none";
+    //     document.getElementById('box8').style.display = "none";
+    // };
+    // btn3.onclick = function() {
+    //     document.getElementById('box1').style.display = "none";
+    //     document.getElementById('box2').style.display = "none";
+    //     document.getElementById('box3').style.display = "block";
+    //     document.getElementById('box4').style.display = "none";
+    //     document.getElementById('box5').style.display = "none";
+    //     document.getElementById('box6').style.display = "none";
+    //     document.getElementById('box7').style.display = "none";
+    //     document.getElementById('box8').style.display = "none";
+    // };
+    // btn4.onclick = function() {
+    //     document.getElementById('box1').style.display = "none";
+    //     document.getElementById('box2').style.display = "none";
+    //     document.getElementById('box3').style.display = "none";
+    //     document.getElementById('box4').style.display = "block";
+    //     document.getElementById('box5').style.display = "none";
+    //     document.getElementById('box6').style.display = "none";
+    //     document.getElementById('box7').style.display = "none";
+    //     document.getElementById('box8').style.display = "none";
+    // };
+    // btn5.onclick = function() {
+    //     document.getElementById('box1').style.display = "none";
+    //     document.getElementById('box2').style.display = "none";
+    //     document.getElementById('box3').style.display = "none";
+    //     document.getElementById('box4').style.display = "none";
+    //     document.getElementById('box5').style.display = "block";
+    //     document.getElementById('box6').style.display = "none";
+    //     document.getElementById('box7').style.display = "none";
+    //     document.getElementById('box8').style.display = "none";
+    // };
+    // btn6.onclick = function() {
+    //     document.getElementById('box1').style.display = "none";
+    //     document.getElementById('box2').style.display = "none";
+    //     document.getElementById('box3').style.display = "none";
+    //     document.getElementById('box4').style.display = "none";
+    //     document.getElementById('box5').style.display = "none";
+    //     document.getElementById('box6').style.display = "block";
+    //     document.getElementById('box7').style.display = "none";
+    //     document.getElementById('box8').style.display = "none";
+    // };
+    // btn7.onclick = function() {
+    //     document.getElementById('box1').style.display = "none";
+    //     document.getElementById('box2').style.display = "none";
+    //     document.getElementById('box3').style.display = "none";
+    //     document.getElementById('box4').style.display = "none";
+    //     document.getElementById('box5').style.display = "none";
+    //     document.getElementById('box6').style.display = "none";
+    //     document.getElementById('box7').style.display = "block";
+    //     document.getElementById('box8').style.display = "none";
+    // };
+    // btn8.onclick = function() {
+    //     document.getElementById('box1').style.display = "none";
+    //     document.getElementById('box2').style.display = "none";
+    //     document.getElementById('box3').style.display = "none";
+    //     document.getElementById('box4').style.display = "none";
+    //     document.getElementById('box5').style.display = "none";
+    //     document.getElementById('box6').style.display = "none";
+    //     document.getElementById('box7').style.display = "none";
+    //     document.getElementById('box8').style.display = "block";
+    // };
 </script>
 
 </html>
