--- a/home.html
+++ b/home.html
@@ -472,9 +472,9 @@
 
             <div class="text">
                 <div class="player">
-                    <div class="name">李俊慧-刘雨辰</div>
+                    <div class="name">刘玄炫-夏玉婷</div>
                     <div class="vs">vs</div>
-                    <div class="name">王懿律-黄凯祥</div>
+                    <div class="name">金昭映-孔熙容</div>
                 </div>
                 <table>
                     <tr>
@@ -484,26 +484,26 @@
                         <td>最高速度(m/s)</td>
                     </tr>
                     <tr>
-                        <td style="width: 20%;">李俊慧</td>
+                        <td style="width: 20%;">刘玄炫</td>
                         <td id="1_a1_zjl"></td>
                         <td id="1_a1_pjsd"></td>
                         <td id="1_a1_zgsd"></td>
                     </tr>
                     <tr>
 
-                        <td style="width: 20%;">刘雨辰</td>
+                        <td style="width: 20%;">夏玉婷</td>
                         <td id="1_a2_zjl"></td>
                         <td id="1_a2_pjsd"></td>
                         <td id="1_a2_zgsd"></td>
                     </tr>
                     <tr>
-                        <td style="width: 20%;">王懿律</td>
+                        <td style="width: 20%;">金昭映</td>
                         <td id="1_b1_zjl"></td>
                         <td id="1_b1_pjsd"></td>
                         <td id="1_b1_zgsd"></td>
                     </tr>
                     <tr>
-                        <td style="width: 20%;">黄凯祥</td>
+                        <td style="width: 20%;">孔熙容</td>
                         <td id="1_b2_zjl"></td>
                         <td id="1_b2_pjsd"></td>
                         <td id="1_b2_zgsd"></td>
